# fp-core.rs

./: .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  azure-pipeline.yaml
fp-core/: Cargo.toml
fp-core/fp-core/tests/: applicative_tests.rs  foldable_tests.rs  functor_tests.rs  monad_tests.rs  monoid_tests.rs
fp-core/fp-core/tests/laws/: functor_laws.rs  monad_laws.rs  monoid_laws.rs
fp-core/src/: applicative.rs  apply.rs  chain.rs  comonad.rs  compose.rs  empty.rs  extend.rs  extract.rs  foldable.rs  functor.rs  hkt.rs  identity.rs  lens.rs  lib.rs  monad.rs  monoid.rs  pure.rs  semigroup.rs  setoid.rs  traverse.rs
fp-examples/: Cargo.toml
fp-examples/src/: adt_example.rs  anamorphism_example.rs  applicative_example.rs  cartesian_product.rs  closure_example.rs  comonad_example.rs  empty_example.rs  foldable_example.rs  function_composition_example.rs  functor_example.rs  idempotent_example.rs  isomorphism_example.rs  lens_example.rs  main.rs  monad_example.rs  monoid_example.rs  partial_application_example.rs  pointed_functor_example.rs  predicate_example.rs  referential_transparency_example.rs  semigroup_example.rs  setoid_example.rs  side_effects_example.rs  traverse_example.rs  type_signature_example.rs  value.rs
fp-examples/src/fp_core/: empty_example.rs  lens_example.rs
fp-examples/src/fp_core_examples/: applicative_example.rs  comonad_example.rs  mod.rs  setoid_example.rs
fp-examples/src/fp_jargon/: arity_example.rs  catamorphism_example.rs  endomorphism_example.rs  hof_example.rs  homomorphism_example.rs  mod.rs  option_example.rs  partial_application_example.rs  predicate_example.rs  type_signature_example.rs
src/: adt_example.rs  anamorphism_example.rs  applicative_example.rs  arity_example.rs  catamorphism_example.rs  closure_example.rs  comonad_example.rs  continuation.rs  contracts.rs  currying_example.rs  endomorphism_example.rs  foldable_example.rs  function_composition_example.rs  functor_example.rs  hof_example.rs  (+17 more)
(+2 files in other folders)
