[package]
name = "fp-core"
version = "0.1.3"
authors = ["Jason Shin <visualbbasic@gmail.com>"]
edition = "2018"
description = "A library for functional programming in Rust"
license = "MIT"
keywords = [
  "fp",
  "haskell",
  "pure",
  "fantasyland",
  "applicative",
  "apply",
  "chain",
  "comonad",
  "compose",
  "empty",
  "extend",
  "extract",
  "functor",
  "hkt",
  "identity",
  "lens",
  "monad",
  "monoid",
  "semigroup",
  "setoid"
]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
