[package]
name = "fp-core"
version = "0.1.4"
authors = ["Jason Shin <visualbbasic@gmail.com>"]
edition = "2018"
description = "A library for functional programming in Rust"
license = "MIT"
keywords = [
  "fp",
  "haskell",
  "applicative",
  "functor",
  "monad",
]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
