[package]
name = "fp-core"
version = "0.1.9"
authors = ["Jason Shin <visualbbasic@gmail.com>", "Heman Gandhi <hemangandhi@gmail.com>"]
edition = "2018"
description = "A library for functional programming in Rust"
license = "MIT"
keywords = [
  "fp",
  "haskell",
  "applicative",
  "functor",
  "monad",
]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
