[package]
name = "fp-examples"
version = "0.1.0"
authors = ["Jason Shin <visualbbasic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partial_application = "0.1.0"
itertools = "0.8.0"
fp-core = { path = "../fp-core" }
